Fix - adds overflow-y: scroll to html to try to prevent mystery 10px shift left when navigating the app

--- a/client/src/styles/_main.scss
+++ b/client/src/styles/_main.scss
@@ -12,6 +12,10 @@ body,
   height: 100%;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   padding: 0;
   margin: 0;
